Fix UI to react to light/dark mode, add some help messages, fix dialog messages.

--- a/src/html/component-analysis/analysis-component/analysis-component.less
+++ b/src/html/component-analysis/analysis-component/analysis-component.less
@@ -20,7 +20,6 @@
   text-align: center;
   margin-bottom: 20px;
   margin-top: 20px;
-  color: rgba(250, 250, 250, 0.95);
   font-size: 18px;
   line-height: 25px;
 }
@@ -29,7 +28,6 @@
   margin-top: 20px;
   text-align: center;
   margin-bottom: 10px;
-  color: rgba(250, 250, 250, 0.95);
 }
 
 .dump-bdd-options {
