--- a/src/html/component-editor/initial-screen/initial-screen.less
+++ b/src/html/component-editor/initial-screen/initial-screen.less
@@ -27,24 +27,17 @@
 
 .intro-section {
   text-align: center;
-  margin: 20px 0;
-  padding: 15px;
-  border-radius: 8px;
-  width: 450px;
-  margin: 60px auto;
-  font-size: 1em;
-  background-color: rgb(140, 140, 140);
-  color: white;
+  width: 480px;
+  margin: 30px 0;
+  padding: 24px;
+  border-radius: 12px;
+  font-size: 18px;
+  opacity: 0.5;
 }
 
 .options {
   text-align: left;
 }
-
-@heading-bullet-border: @text-dark;
-.intro-section h3 {
-  color: @text-dark;
-}  
 
 .button-group {
   padding: 20px;
