--- a/src/html/component-editor/regulations-editor/regulations-editor.less
+++ b/src/html/component-editor/regulations-editor/regulations-editor.less
@@ -16,3 +16,15 @@
 .header h3 {
   color: @text-dark;
 }
+
+#quick-help {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  padding: 24px;
+  border-radius: 12px;
+  font-size: 18px;
+  opacity: 0.5;
+  transition: 0.3s;
+}
